# routes/index.js
@@ -3,5 +3,6 @@ const usersController = require('../controllers/main');
 
 routes.get('/', usersController.main);
 routes.use('/users', require('./users'));
+routes.use('/posts', require('./posts'));
 
 module.exports = routes;
